--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,8 @@ jobs:
       - run: mvn integration-test
 
       - store_test_results:
-          path: target/surefire-reports
+#          path: target/surefire-reports
+          path: target/site/jacoco
 
       - run:
           name: Send to CodeCov
