--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,11 @@ jobs:
     working_directory: ~/repo
 
     environment:
-        global:
-          - CODECOV_TOKEN='487e0890-3f32-4c93-aa48-7613d2c28279'
       # Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
+    env:
+      global:
+        - CODECOV_TOKEN=:'487e0890-3f32-4c93-aa48-7613d2c28279'
 
     steps:
       - checkout
