--- a/src/main/resources/application-mail.properties
+++ b/src/main/resources/application-mail.properties
@@ -1,5 +1,7 @@
-#server.servlet.encoding.enabled=false
 
+# ===============================
+# = SMTP MAIL SETTING
+# ===============================
 #spring-boot-starter-mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
