--- a/stack.yml
+++ b/stack.yml
@@ -2,20 +2,25 @@
 version: '3.1'
 
 services:
-
+# Setting up Database
   db:
     image: postgres
     restart: always
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: sportbuddydb
+#      POSTGRES_USER: sportbuddydb #user default: 'postgres'
       POSTGRES_PASSWORD: sportbuddy
 #      POSTGRES_HOST_AUTH_METHOD: md5
 #      PGDATA: /var/lib/postgresql/data/pgdata
 
-#  adminer:
-#    image: adminer
-#    restart: always
-#    ports:
-#      - 4040:4040
+# Using Adminer to manage DB:
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+#        Careful with Port conflict!
+#      - "4040:4040"
+      - "8080:8080"
+
+
