creating profiles to run the application.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#for testing (standard):
 spring.profiles.active=default, mail
+
+#for developing:
+#spring.profiles.active=dev, mail
+
+#for production:
+#spring.profiles.active=prod, mail
