--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.profiles.active=default, mail
 
 #for production:
 #spring.profiles.active=prod, mail
+
+#for heroku:
+#spring.profiles.active=hero, mail
